--- a/src/pages/Privacy/Privacy.css
+++ b/src/pages/Privacy/Privacy.css
@@ -44,4 +44,8 @@
   .users {
     grid-template-columns: 1fr;
   }
+
+  .users .os {
+    overflow: hidden;
+  }
 }
